# libg15

./: .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.rst  configure  configure.ac  configure.in  libg15.c  libg15.h
arch/: .SRCINFO  PKGBUILD
debian/: changelog
dists/debian/: changelog  control  rules
dists/freebsd/: Makefile
dists/rpm/: libg15.spec
dists/venom/: .checksums  spkgbuild
dists/void/: template
rpm/: libg15.spec
